--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,6 +1,7 @@
-.button1, .button2{
+.button1, 
+.button2{
     font-size: 28px;
-    font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
 .button1 {
