--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,11 +1,11 @@
 /* Add CSS Styling */
 
 .avatar#proportioned{
-    width: 300;
+    width: 300px;
     height: auto;
 }
 
 .avatar#distorted{
-    width: 200;
-    height: 400;
+    width: 200px;
+    height: 400px;
 }
