Fix css to expected outcome

--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,35 +8,41 @@ body {
   font-weight: 800;
 }
 
+.para {
+  font-size: 30px;
+}
+
 .small-para {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
+button {
+  font-size:25px;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
+#confirm-button {
+  background-color: green;
+  color: white;
+  font-weight:bold;
 }
 
-.child {
+#cancel-button{
+  background-color: white;
+}
+
+/* .text{
+  font-weight: 100;
+} */
+
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 div.text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
+  font-size: 25px;
   font-weight: 100;
 }
